# advent2018

./: hask.cabal
src/: D1.hs  D2.hs  Main.hs
src/D1/: One.hs  Two.hs
test/: D1Spec.hs  D2Spec.hs
test/D1/: OneSpec.hs  TwoSpec.hs
