name:                hask
version:             0.1.0.0
homepage:            https://github.com/githubuser/hask#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hask-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends: base >= 4.7 && < 5, hask, containers

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5, containers
  exposed-modules:
      D1.One
      D1.Two
  default-language: Haskell2010

test-suite hask
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5, hspec ==2.*, hask,containers
  other-modules:
      D1.OneSpec
      D1.TwoSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
