name:                hask
version:             0.1.0.0
homepage:            https://github.com/githubuser/hask#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hask-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: D1, D2
  build-depends: base >= 4.7 && < 5, hask, containers, array

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5, containers, array
  exposed-modules: D1, D2
  default-language: Haskell2010

test-suite hask
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5, hspec ==2.*, hask, containers, array
  other-modules: D1Spec, D2Spec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
